Outliner doesn't update after adding a mesh with a script. #84475

Closed
opened 2021-01-07 00:48:30 +01:00 by Petri Jarvinen · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-26 22:50, hash: 7916c59304
Worked: (newest version of Blender that worked as expected)

Short description of error
Outliner doesn't update after adding a mesh with a script.

Exact steps for others to reproduce the error

  • Open blender with default cube.
  • Change active workspace to scripting
  • In Outliner that has display mode as "blender file", expand Meshes and verify that you have Cube mesh there.
  • In Text editor click + to create new script file.
  • paste the following script in text editor: import bpy;mesh = bpy.data.meshes.new(name="MyMesh")
  • Click Run script in the text editor.
  • Verify that in the Info window a new line is added "bpy.ops.text.run_script()"
  • Notice how "MyMesh" was not added to the outliner, as is expected.
  • Click twice "filter by type" button in the Outliner to force an update, and notice that now Meshes has "Cube" and "MyMesh" meshes.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-26 22:50, hash: `7916c59304` Worked: (newest version of Blender that worked as expected) **Short description of error** Outliner doesn't update after adding a mesh with a script. **Exact steps for others to reproduce the error** - Open blender with default cube. - Change active workspace to scripting - In Outliner that has display mode as "blender file", expand Meshes and verify that you have Cube mesh there. - In Text editor click + to create new script file. - paste the following script in text editor: import bpy;mesh = bpy.data.meshes.new(name="MyMesh") - Click Run script in the text editor. - Verify that in the Info window a new line is added "bpy.ops.text.run_script()" - Notice how "MyMesh" was not added to the outliner, as is expected. - Click twice "filter by type" button in the Outliner to force an update, and notice that now Meshes has "Cube" and "MyMesh" meshes.
Author

Added subscriber: @Petri_J

Added subscriber: @Petri_J

Added subscriber: @oweissbarth

Added subscriber: @oweissbarth

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm this issue.

I can confirm this issue.
Philipp Oeser self-assigned this 2021-01-07 13:41:17 +01:00

This issue was referenced by c44a17ec4b

This issue was referenced by c44a17ec4b247b0af5e4c58bbcfca6dece51baf1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84475
No description provided.